# Bulao

./: .gitignore  HANDOFF.md  README.md  aws_deployment_guide.md
backend/: .env.example  .gitignore  Dockerfile  README.md  eval_report.md  pyproject.toml  pytest_out.txt  test_out.txt
backend/app/: config.py  main.py  models.py  orchestrator.py
backend/app/agents/: booking_agent.py  discovery_agent.py  followup_agent.py  intent_agent.py  pricing_agent.py  ranking_agent.py
backend/app/data/: bulao_cache.db  demo_canned_response.json  intent_examples.jsonl  neighborhoods.json  providers.json
backend/app/db/: cache_manager.py  firestore_client.py
backend/app/prompts/: followup.md  intent.md  pricing.md  ranking.md
backend/app/routers/: book.py  dispute.py  followup_trigger.py  health.py  lifecycle.py  orchestrate.py  rating.py  services.py
backend/app/tools/: pdf_receipt.py
backend/app/utils/: __init__.py  llm_client.py
backend/data/: intent_examples.jsonl
backend/scripts/: deploy.sh  eval_intent.py  gen_providers.py  trigger_reminders.py
backend/tests/: test_discovery_agent.py  test_health.py  test_intent_agent.py  test_orchestrate.py  test_pricing_agent.py  test_ranking_agent.py
data/: backend_workflows.txt  engineering_playbook.txt  rolepack1_product.txt  rolepack2_mobile.txt  rolepack3_backend_agents.txt  rolepack5_infra_demo.txt
docs/: demo-voiceover.md  pitch-script.md
mobile/: .metadata  README.md  firebase.json  pubspec.yaml  splash.yaml
mobile/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
mobile/lib/: main.dart  (+1 more)
(+73 files in other folders)
